--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <span class="note-color-4" data-color="4" onclick="selectColor(this)"></span>
         <span class="note-color-5" data-color="5" onclick="selectColor(this)"></span>
       </div>
-      <div id="color-prompt" style="color: red; display: none;">Please select a color for the note</div>
+      <div id="color-prompt" style="color: #071952; display: none;">Please select a color for the note</div>
       <input type="hidden" id="selected-color" />
       <div id="btn-container">
         <button id="submitBtn">Create Note</button>
